// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Flex Column Direction 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah jrGUyo"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah cisfns"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Flex On Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah dTTwkv"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs bTSdEc sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Justified 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah glQHfA"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Wrap 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah dTTwkv"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cDyceN"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT imbyIY"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT cCRBDl"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;
